#15532 closed bug (fixed)
[scripting] Terminal crash when receiving some scripting messages
Reported by: | X512 | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Applications/Terminal | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev53618 gcc2hybrid.
Steps to reproduce:
- Open Terminal
- Write "hey application/x-vnd.Haiku-Terminal GET View 0 of View 0 of View 0 of View 0 of View 1 of Window 0" in Pe.
- Press Alt+Enter when text caret is inside typed line.
- Terminal crash.
Attachments (1)
Change History (5)
by , 14 months ago
Attachment: | Terminal-640-debug-08-12-2019-17-33-40.report added |
---|
comment:1 by , 13 months ago
comment:4 by , 9 months ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Debug report.