Terminal: fix TermView scripting

fix #15532.

Change-Id: I342d72c8de7a4e352329adb0510e3c7341702ef7
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2016
Reviewed-by: Jérôme Duval <jerome.duval@gmail.com>